# azure-log-forwarding-orchestration

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE-3rdparty.csv  NOTICE  README.md  SECURITY.md  WORKSPACE  azuredeploy.json  bicepconfig.json  diagnostic_settings_task.spec  pyproject.toml  requirements-dev.txt  static-analysis.datadog.yml
.github/: CODEOWNERS  labeler.yml  labels.yml  pull_request_template.md
.github/workflows/: coverage.yml  labeler.yml
cache/: README.md  diagnostic_settings_cache.py  resources_cache.py
cache/tests/: __init__.py  test_diagnostic_settings_cache.py  test_resources_cache.py
ci/: run-tests.sh
ci/build-image/: Dockerfile  golang.Dockerfile
ci/deployer-task/: Dockerfile
ci/scripts/: add_copyright_header.py  coverage-comment.sh  make-container-public.py  make-container-public.sh
ci/scripts/arm-template/: build.py  build_initial_run.py  upload-public.sh  upload-qa-env.sh
ci/scripts/arm_template/: upload-public.sh  upload-qa-env.sh
ci/scripts/control_plane/: build.sh  build_initial_run.py  build_tasks.sh  format.sh  lint.sh  publish.py  set_version.sh  test-dependencies.sh  test.py  test.sh  type-check.sh  unset_version.sh
ci/tasks/: build-base-image.sh  build.sh  coverage-comment.sh  json-lint.sh  run-tests.sh  test.sh  type-check.sh
config/: local.settings.example.json  requirements.txt
config/diagnostic_settings_task/: function.json  requirements.txt
config/resources_task/: requirements.txt
control_plane/: .dockerignore  README.md  pyproject.toml
control_plane/cache/: __init__.py  assignment_cache.py  cache.py  common.py  diagnostic_settings_cache.py  diagnostic_settings_event_cache.py  env.py  log_forwarder_metric_cache.py  manifest_cache.py  metric_blob_cache.py  resource_metric_cache.py  resources_cache.py  settings_event_cache.py  user_config.py
control_plane/cache/tests/: __init__.py  test_assignment_cache.py  test_common.py  test_diagnostic_settings_cache.py  test_diagnostic_settings_event_cache.py  test_env.py  test_manifest_cache.py  test_metric_blob_cache.py  test_resources_cache.py  test_user_config.py
control_plane/config/: __init__.py  host.json
control_plane/config/diagnostic_settings_task/: function.json
control_plane/config/resources_task/: function.json
control_plane/config/scaling_task/: function.json
control_plane/scripts/: initial_run.py  publish.py  remove_diagnostic_settings.py  uninstall.py
control_plane/scripts/tests/: test_initial_run.py
control_plane/src/cache/: diagnostic_settings_cache.py
control_plane/src/cache/tests/: test_diagnostic_settings_cache.py
control_plane/src/tasks/: resources_task.py
control_plane/src/tasks/tests/: test_resources_task.py
control_plane/tasks/: __init__.py  __main__.py  common.py  concurrency.py  constants.py  control_plane_deployer.py  deploy_common.py  deployer_task.py  diagnostic_settings_task.py  initial_run.py  monitor_task.py  resources_task.py  scaling_task.py  task.py  version.py
control_plane/tasks/client/: datadog_api_client.py  filtering.py  log_forwarder_client.py  resource_client.py  resources_client.py
control_plane/tasks/client/tests/: test_datadog_api_client.py  test_filtering.py  test_log_forwarder_client.py  test_resource_client.py  test_tag_filtering.py
control_plane/tasks/tests/: common.py  test_common.py  test_concurrency.py  test_constants.py  test_deployer_task.py  test_diagnostic_settings_task.py  test_resources_task.py  test_scaling_task.py  test_task.py
deploy/: README.md  azuredeploy.bicep  azuredeploy.json  control_plane.bicep  createUiDefinition.json  forwarder.bicep  forwarder_resource_group_permissions.bicep  forwarder_resource_groups.bicep  initial_run.bicep  resource_group_permissions.bicep  subscription_permissions.bicep  validate_key.bicep
diagnostic_settings_task/: .funcignore  .gitignore  cache.py  function_app.py  remove_diagnostic_settings.py  requirements.txt
diagnostic_settings_task/tests/: test_cache.py  test_diagnostic_settings_task.py
event_hub_scaling_task/: function_app.py  requirements.txt
forwarder/: Dockerfile  README.md  build.sh  build_and_publish.sh  datadog-agent.yaml  docker-compose.yml  forwarder-deployment.yaml  go.mod  go.sum
forwarder/cmd/: forwarder.go  forwarder_test.go
forwarder/config/: host.json
goBlobForwarder/: README.md  go.mod  go.sum  main.go
goBlobForwarder/blobForwarder/: function.json
goBlobForwarder/blobStorage/: azureBlobClient.go  blobCursorClient.go  blobStorageClient.go  contants.go  errgroupWithPanicHandler.go
goBlobForwarder/logsProcessing/: blobLogFormatter.go  constants.go  datadogClient.go  logRegexScrubber.go
go_LFO/: README.md  go.mod  go.sum  host.json  main.go
go_LFO/FormatAzureLogs/: batcher.go  blobFormatter.go  constants.go  httpClient.go  scrubber.go
go_LFO/LogsProcessing/: blobLogFormatter.go  constants.go  datadogClient.go  logRegexScrubber.go
go_LFO/blobCache/: AzureBlobClient.go  blobClient.go  blobCursorClient.go  blobPool.go  blobStorageClient.go  contants.go  initilizeBlobCache.go
go_LFO/blobForwarder/: function.json
go_LFO/blobforwarder/: function.json
go_LFO/formatAzureLogs/: DatadogClient.go  batchLogs.go  batcher.go  blobFormatter.go  blobLogFormatter.go  constants.go  httpClient.go  logRegexScrubber.go  scrubber.go
loggy/: README.md  function_app.py  host.json
loggy/HttpTrigger/: function.json
loggy/TimerTrigger/: function.json
resources_task/: .funcignore  README.md  function_app.py  requirements.txt
resources_task/tests/: test_resources_task.py
scripts/: compare_logs.py  deploy-control-plane.sh  deploy_branch_env.py  deploy_personal_env.py  force_scaling.py  remove_diagnostic_settings.py  remove_log_forwarders.py  run_task.sh  uninstall.py  uninstall.py.orig
scripts/arm-template/: gen-template.py  gen-template.sh  gen-url.py  run.sh  upload-public.sh  upload-qa-env.sh  upload.sh
src/cache/: common.py  diagnostic_settings_cache.py  resources_cache.py
src/tasks/: common.py  diagnostic_settings_task.py  resources_task.py
(+137 files in other folders)
