[project]
version = "0.1.0"
name = "azure-log-forwarding-orchestration"
requires-python = ">= 3.11"

# common dependencies
dependencies = [
    "aiohttp==3.11.14",
    "azure-identity==1.15.0",
    "azure-storage-blob==12.20.0",
    "datadog-api-client[async]==2.26.0",
    "jsonschema==4.21.1",
]

[project.optional-dependencies]
resources_task = [
    "azure-mgmt-cdn==13.1.1",
    "azure-mgmt-healthcareapis==2.1.0",
    "azure-mgmt-media==10.2.0",
    "azure-mgmt-netapp==13.3.0",
    "azure-mgmt-network==28.1.0",
    "azure-mgmt-notificationhubs==8.0.0",
    "azure-mgmt-powerbiembedded==3.0.0",
    "azure-mgmt-redisenterprise==3.0.0",
    "azure-mgmt-resource==23.0.1",
    "azure-mgmt-sql==3.0.1",
    "azure-mgmt-synapse==2.0.0",
    "azure-mgmt-web==8.0.0",
]
diagnostic_settings_task = ["azure-mgmt-monitor==6.0.2"]
scaling_task = [
    "azure-mgmt-appcontainers==3.1.0",
    "azure-mgmt-storage==22.0.0",
    "tenacity==9.0.0",
    "PyYAML==6.0.2",
]
deployer_task = [
    "azure-mgmt-web==8.0.0",
    "azure-mgmt-storage==22.0.0",
    "tenacity==9.0.0",
]

dev = [
    "azure-log-forwarding-orchestration[resources_task,diagnostic_settings_task,scaling_task,deployer_task]",
    "pre-commit==4.1.0",
    "pytest==8.3.5",
    "coverage==7.6.12",
    "pycobertura==3.3.2",
    "stickytape==0.2.1",
    "pyright==1.1.396",
    "ruff==0.11.0",
    "types-jsonschema==4.23.0.20241208",
    "types-requests==2.32.0.20250301",
    "uv==0.6.6", # used for dependency testing, not normal dev workflow
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]

[tool.pyright]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]

reportMissingImports = "error"
reportMissingTypeStubs = false


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = ["E501", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
