[project]
version = "0.1.0"
name = "azure-log-forwarding-orchestration"
requires-python = ">= 3.11"

# common dependencies
dependencies = [
    "aiohttp==3.11.18",
    "azure-identity==1.21.0",
    "azure-storage-blob==12.25.1",
    "datadog-api-client[async]==2.34.0",
    "jsonschema==4.23.0",
]

[project.optional-dependencies]
resources_task = [
    "azure-mgmt-cdn==13.1.1",
    "azure-mgmt-healthcareapis==2.1.0",
    "azure-mgmt-media==10.2.0",
    "azure-mgmt-netapp==13.5.0",
    "azure-mgmt-network==28.1.0",
    "azure-mgmt-notificationhubs==8.0.0",
    "azure-mgmt-powerbiembedded==3.0.0",
    "azure-mgmt-redisenterprise==3.0.0",
    "azure-mgmt-resource==23.3.0",
    "azure-mgmt-sql==3.0.1",
    "azure-mgmt-synapse==2.0.0",
    "azure-mgmt-web==8.0.0",
]
diagnostic_settings_task = ["azure-mgmt-monitor==6.0.2"]
scaling_task = [
    "azure-mgmt-appcontainers==3.2.0",
    "azure-mgmt-storage==22.2.0",
    "tenacity==9.1.2",
    "PyYAML==6.0.2",
]
deployer_task = [
    "azure-mgmt-web==8.0.0",
    "tenacity==9.1.2",
]

dev = [
    "azure-log-forwarding-orchestration[resources_task,diagnostic_settings_task,scaling_task,deployer_task]",
    "pre-commit==4.2.0",
    "pytest==8.3.5",
    "coverage==7.8.0",
    "pycobertura==4.0.0",
    "stickytape==0.2.1",
    "pyright==1.1.400",
    "ruff==0.11.7",
    "types-jsonschema==4.23.0.20241208",
    "types-requests==2.32.0.20250328",
    "uv==0.6.17", # used for dependency testing, not normal dev workflow
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]

[tool.pyright]
exclude = ["**/__pycache__", "*.egg-info", ".*/", "config", "build"]

reportMissingImports = "error"
reportMissingTypeStubs = false


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = ["E501", "B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
